# crypto

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  mkdocs.yml  rust-toolchain.toml
.config/: nextest.toml
miden-crypto/: Cargo.toml
miden-crypto/benches/: README.md  dsa.rs  encryption.rs  forest.rs  hash.rs  large-smt.rs  large_smt.rs  large_smt_forest.rs  merkle.rs  rand.rs  smt-historical.rs  smt-subtree.rs  smt-with-entries.rs  smt.rs  sparse_path.rs  store.rs  transpose.rs  word.rs
miden-crypto/benches/common/: config.rs  data.rs  macros.rs  mod.rs
miden-crypto/proptest-regressions/merkle/smt/large_forest/: property_tests.txt
miden-crypto/src/: lib.rs  main.rs  test_utils.rs  word.rs
miden-crypto/src/aead/: mod.rs
miden-crypto/src/aead/aead_poseidon2/: mod.rs  test.rs
miden-crypto/src/aead/aead_rpo/: mod.rs  test.rs
miden-crypto/src/aead/xchacha/: mod.rs  test.rs
miden-crypto/src/dsa/: mod.rs
miden-crypto/src/dsa/ecdsa_k256/: mod.rs
miden-crypto/src/dsa/ecdsa_k256_keccak/: mod.rs  tests.rs
miden-crypto/src/dsa/ecdsa_secp256k1/: key_agreement.rs  mod.rs  tests.rs
miden-crypto/src/dsa/eddsa_25519/: mod.rs  tests.rs
miden-crypto/src/dsa/eddsa_25519_sha512/: mod.rs  tests.rs
miden-crypto/src/dsa/falcon512_poseidon2/: hash_to_point.rs  mod.rs  signature.rs
miden-crypto/src/dsa/falcon512_poseidon2/keys/: mod.rs  secret_key.rs
miden-crypto/src/dsa/falcon512_poseidon2/math/: ffsampling.rs  fft.rs  mod.rs  polynomial.rs  samplerz.rs
miden-crypto/src/dsa/falcon512_poseidon2/tests/: data.rs  mod.rs
miden-crypto/src/dsa/falcon512_rpo/: hash_to_point.rs  mod.rs  signature.rs
miden-crypto/src/dsa/falcon512_rpo/keys/: mod.rs  public_key.rs  secret_key.rs
miden-crypto/src/dsa/falcon512_rpo/math/: ffsampling.rs  fft.rs  field.rs  flr.rs  gauss_fndsa.rs  mod.rs  poly_flr.rs  polynomial.rs  sampler_flr.rs  samplerz.rs
miden-crypto/src/dsa/falcon512_rpo/math/flr/: emu.rs  native.rs  poly.rs  poly_avx2.rs  sampler.rs
miden-crypto/src/dsa/falcon512_rpo/math/fn_dsa/: mod.rs
miden-crypto/src/dsa/falcon512_rpo/math/fndsa/: gauss.rs  mod.rs
miden-crypto/src/dsa/falcon512_rpo/math/ntru_opt/: fxp.rs  mod.rs  ntru.rs  zint31.rs
miden-crypto/src/dsa/falcon512_rpo/tests/: data.rs  mod.rs
miden-crypto/src/dsa/rpo_falcon512/: hash_to_point.rs  mod.rs  signature.rs  tests.rs
miden-crypto/src/dsa/rpo_falcon512/keys/: mod.rs  public_key.rs  secret_key.rs
miden-crypto/src/dsa/rpo_falcon512/math/: ffsampling.rs  fft.rs  field.rs  mod.rs  polynomial.rs  samplerz.rs
miden-crypto/src/dsa/rpo_falcon512/tests/: data.rs  mod.rs  prng.rs
miden-crypto/src/ecdh/: k256.rs  mod.rs  x25519.rs
miden-crypto/src/encryption/: mod.rs  test.rs
miden-crypto/src/encryption/aead_rpo/: mod.rs  test.rs
miden-crypto/src/encryption/aes_gcm/: mod.rs  test.rs
miden-crypto/src/encryption/chacha20poly1305/: mod.rs
miden-crypto/src/encryption/ies/: crypto_box.rs  error.rs  keys.rs  message.rs  mod.rs
miden-crypto/src/encryption/rpo/: mod.rs  test.rs
miden-crypto/src/encryption/xchacha/: mod.rs  test.rs
miden-crypto/src/hash/: digest.rs  mod.rs
miden-crypto/src/hash/algebraic_sponge/: mod.rs
miden-crypto/src/hash/algebraic_sponge/poseidon2/: constants.rs  mod.rs  test.rs
miden-crypto/src/hash/algebraic_sponge/rescue/: mod.rs  tests.rs
miden-crypto/src/hash/algebraic_sponge/rescue/arch/: mod.rs  x86_64_avx2.rs  x86_64_avx512.rs
miden-crypto/src/hash/blake/: mod.rs  tests.rs
miden-crypto/src/hash/keccak/: mod.rs  tests.rs
miden-crypto/src/hash/poseidon2/: mod.rs  tests.rs
miden-crypto/src/hash/rescue/: mod.rs
miden-crypto/src/hash/rescue/mds/: mod.rs
miden-crypto/src/hash/rescue/rpo/: digest.rs  mod.rs  tests.rs
miden-crypto/src/hash/rescue/rpx/: digest.rs  mod.rs  tests.rs
miden-crypto/src/hash/sha2/: mod.rs  tests.rs
miden-crypto/src/ies/: crypto_box.rs  error.rs  keys.rs  message.rs  mod.rs  tests.rs
miden-crypto/src/merkle/: empty_roots.rs  empty_subtrees_poseidon2.inc.rs  error.rs  index.rs  merkle_tree.rs  mod.rs  node.rs  path.rs  proptest_tests.rs  sparse_path.rs
miden-crypto/src/merkle/mmr/: bit.rs  delta.rs  error.rs  forest.rs  full.rs  inorder.rs  mod.rs  mountain_range.rs  partial.rs  peaks.rs  proof.rs  tests.rs
miden-crypto/src/merkle/partial_mt/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/: mod.rs  partial.rs
miden-crypto/src/merkle/smt/forest/: mod.rs  store.rs  tests.rs
miden-crypto/src/merkle/smt/full/: error.rs  leaf.rs  mod.rs  proof.rs  tests.rs
miden-crypto/src/merkle/smt/historical/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/history/: error.rs  mod.rs
miden-crypto/src/merkle/smt/large/: batch_ops.rs  construction.rs  error.rs  iter.rs  mod.rs  property_tests.rs  smt_trait.rs  tests.rs
miden-crypto/src/merkle/smt/large_forest/: backend.rs  config.rs  error.rs  iterator.rs  mod.rs  operation.rs  prefix.rs  property_tests.rs  root.rs  test_utils.rs  tests.rs  utils.rs
miden-crypto/src/merkle/smt/partial/: mod.rs  tests.rs
miden-crypto/src/merkle/smt/simple/: mod.rs  tests.rs
miden-crypto/src/merkle/store/: mod.rs  tests.rs
miden-crypto/src/rand/: coin.rs  mod.rs  rpo.rs  rpx.rs  test_utils.rs
miden-crypto/src/utils/: iterators.rs  kv_map.rs  mod.rs
miden-crypto/src/utils/serde/: byte_reader.rs
miden-crypto/src/word/: lexicographic.rs  macros.rs  mod.rs  tests.rs
miden-crypto/tests/: rocksdb_large_smt.rs
miden-field/: Cargo.toml  build.rs
miden-field/src/: lib.rs  native.rs  utils.rs  wasm_miden.rs
miden-field/src/native/: mod.rs  tests.rs
miden-field/src/word/: lexicographic.rs  mod.rs  tests.rs
miden-serde-utils/: Cargo.toml  README.md
miden-serde-utils/fuzz/: Cargo.toml
miden-serde-utils/fuzz/fuzz_targets/: goldilocks.rs
miden-serde-utils/src/: byte_reader.rs  lib.rs  p3_compat.rs  winter_compat.rs
miden-serialization/: Cargo.toml  README.md
miden-serialization/examples/: basic_usage.rs
miden-serialization/src/: byte_read.rs  byte_write.rs  error.rs  lib.rs  slice_reader.rs  traits.rs  vec_writer.rs  winterfell_bridge.rs
(+22793 files in other folders)
