[workspace]
exclude  = ["miden-crypto-fuzz"]
members  = ["miden-crypto", "miden-crypto-derive", "miden-serde-utils"]
resolver = "3"

[workspace.package]
authors      = ["miden contributors"]
categories   = ["cryptography", "no-std"]
edition      = "2024"
keywords     = ["crypto", "hash", "merkle", "miden"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/0xMiden/crypto"
rust-version = "1.90"
version      = "0.20.0"

[workspace.dependencies]
miden-crypto-derive = { path = "miden-crypto-derive", version = "0.20" }
miden-serde-utils   = { features = ["p3-compat", "winter-compat"], path = "miden-serde-utils", version = "0.20" }

[workspace.lints.rust]
# Suppress warnings about `cfg(fuzzing)`, which is automatically set when using `cargo-fuzz`.
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }

[profile.test-release]
debug            = 2
debug-assertions = true
inherits         = "release"
overflow-checks  = true

# Patch Plonky3 to use 0xMiden fork with periodic column support
[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-challenger = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-commit = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-dft = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-field = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-interpolation = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-keccak = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-lookup = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-matrix = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-maybe-rayon = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-mds = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-merkle-tree = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-poseidon2 = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-symmetric = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-uni-stark = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
p3-util = { git = "https://github.com/0xMiden/Plonky3", branch = "periodic-air-builder" }
