[workspace]
exclude  = ["miden-crypto-fuzz"]
members  = ["miden-crypto", "miden-crypto-derive", "miden-serde-utils"]
resolver = "3"

[workspace.package]
authors      = ["miden contributors"]
categories   = ["cryptography", "no-std"]
edition      = "2024"
keywords     = ["crypto", "hash", "merkle", "miden"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/0xMiden/crypto"
rust-version = "1.90"
version      = "0.20.0"

[workspace.dependencies]
miden-crypto-derive = { path = "miden-crypto-derive", version = "0.20" }
miden-serde-utils   = { features = ["p3-compat", "winter-compat"], path = "miden-serde-utils", version = "0.20" }

[workspace.lints.rust]
# Suppress warnings about `cfg(fuzzing)`, which is automatically set when using `cargo-fuzz`.
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }

[profile.test-release]
debug            = 2
debug-assertions = true
inherits         = "release"
overflow-checks  = true
