[workspace]
exclude  = ["miden-crypto-fuzz"]
members  = ["miden-crypto", "miden-crypto-derive", "miden-serde-utils"]
resolver = "3"

[workspace.package]
authors      = ["miden contributors"]
categories   = ["cryptography", "no-std"]
edition      = "2024"
keywords     = ["crypto", "hash", "merkle", "miden"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/0xMiden/crypto"
rust-version = "1.90"
version      = "0.22.0"

[workspace.dependencies]
miden-crypto-derive = { path = "miden-crypto-derive", version = "0.22" }
miden-serde-utils   = { path = "miden-serde-utils", version = "0.22" }

[workspace.lints.rust]
# Suppress warnings about `cfg(fuzzing)`, which is automatically set when using `cargo-fuzz`.
unexpected_cfgs = { check-cfg = ['cfg(fuzzing)'], level = "warn" }

[profile.test-release]
debug            = 2
debug-assertions = true
inherits         = "release"
overflow-checks  = true

# Local patch for faster iteration during development
[patch."https://github.com/0xMiden/rust-fn-dsa"]
fn-dsa-comm = { path = "/Users/al/Code/rust-fn-dsa/fn-dsa-comm" }
fn-dsa-kgen = { path = "/Users/al/Code/rust-fn-dsa/fn-dsa-kgen" }
fn-dsa-sign = { path = "/Users/al/Code/rust-fn-dsa/fn-dsa-sign" }
