[package]
authors.workspace      = true
categories.workspace   = true
description            = "A unified field element type for on-chain and off-chain Miden Rust code"
documentation          = "https://docs.rs/miden-field"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-field"
readme                 = "../README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
crate-type = ["rlib"]

[target.'cfg(not(all(target_family = "wasm", miden)))'.dependencies]
miden-serde-utils = { workspace = true }
num-bigint        = { default-features = false, version = "0.4" }
p3-challenger     = { default-features = false, version = "0.4.2" }
p3-field          = { default-features = false, version = "0.4.2" }
p3-goldilocks     = { default-features = false, version = "0.4.2" }
paste             = { version = "1.0.15" }
rand              = { default-features = false, features = ["small_rng"], version = "0.9.0" }
serde             = { default-features = false, features = ["derive"], version = "1.0" }

[features]
default = []

[lints]
workspace = true
