[package]
authors.workspace      = true
categories.workspace   = true
description            = "Serialization/deserialization utilities for Miden"
documentation          = "https://docs.rs/miden-serde-utils"
edition.workspace      = true
keywords.workspace     = true
license.workspace      = true
name                   = "miden-serde-utils"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
default = ["std"]
std     = []

[dependencies]
p3-field      = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "637f6239" }
p3-goldilocks = { default-features = false, git = "https://github.com/Plonky3/Plonky3", rev = "637f6239" }

[lints]
workspace = true
